--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\idepa\\OneDrive\\Desktop\\UofT Boot Camp\\Modules\\Module9 - Surf's Up w Advnaced Data Strorage and Retieval\\surfs_up\\Python\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\idepa\\anaconda3\\envs\\PythonData\\python.exe"
 }
